vpc.tf
# resource "aws_vpc" "New-vpc" {
#   cidr_block       = var.cidr
#   instance_tenancy = "default"

#   tags = {
#     Name = "Test-VPC"
#   }
# }
